Fixed footer overlapping

--- a/all-styles.css
+++ b/all-styles.css
@@ -1,188 +1,190 @@
 /* ===== Styles for all pages ===== */
 body {
-  padding: 0;
-  margin: 0;
-  font-family: "Fredoka", serif;
-  background-size: cover;
-  background-image: url(/stacked-peaks-haikei.svg);
-}
+    padding: 0;
+    margin: 0;
+    margin-bottom: 0rem;
+    font-family: "Fredoka", serif;
+    background-size: cover;
+    background-image: url(./stacked-peaks-haikei.svg);
+  }
+  
+  /* Header border */
+  .header {
+    /*border: 1px solid #6738c4; */
+    padding: 20px;
+    background: #8673ac;
+    position: relative;
+    font-size: 30px;
+    font-style: normal;
+    font-family: "Fredoka";
+    font-weight: 400;
+    line-height: 10px;
+    text-align: center;
+    color: white;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background-image: url(./stacked-peaks-haikei.svg);
+  }
+  
+  /* Container used for centering items */
+  .container {
+    text-align: center;
+  }
+  
+  /* Purple footer */
+  footer {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 2em;
+    width: 99.9%;
+  
+    background: #8673ac;
+    border: 1px solid #6738c4;
+    position: relative;
+    left: 0px;
+    bottom: 0px;
 
-/* Header border */
-.header {
-  /*border: 1px solid #6738c4; */
-  padding: 20px;
-  background: #8673ac;
-  position: relative;
-  font-size: 30px;
-  font-style: normal;
-  font-family: "Fredoka";
-  font-weight: 400;
-  line-height: 10px;
-  text-align: center;
-  color: white;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  background-image: url(/stacked-peaks-haikei.svg);
-}
-
-/* Container used for centering items */
-.container {
-  text-align: center;
-}
-
-/* Purple footer */
-footer {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  height: 50px;
-  width: 99.9%;
-
-  background: #8673ac;
-  border: 1px solid #6738c4;
-  position: absolute;
-  left: 0px;
-  bottom: 0px;
-
-  border-top: 1px solid #6738c3;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  background-image: url(/stacked-peaks-haikei.svg);
-}
-
-/* Credits, info, github link*/
-.credits {
-  position: absolute;
-  bottom: 0px;
-  right: 0px;
-}
-
-.github-icon {
-  display: inline-block;
-  margin-right: 10px;
-  margin-left: 10px;
-  margin-top: 10px;
-}
-
-/* ===== Styles for home-screen.html =====*/
-.icon {
-  text-align: center;
-  color: black;
-  margin: 0 5px;
-}
-
-.icon:hover {
-  color: white;
-}
-
-.icon:active {
-  color: #e5cde9;
-}
-
-h3 {
-  text-align: center;
-}
-
-.dropdown_box {
-  width:140px;
-  height:40px;
-  border:0px;
-  outline:none;
-  max-width: 30em;
-  font-size: 13px;
-  padding: 10px 8px 10px 0px;
-  background: #fff;
-  border-radius: 10px;
-  overflow: hidden;
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.dropdown_box .dropdown_options {
-  width: 100%;
-  background: url("arrow.png") no-repeat;
-  background: 90% center;
-  text-align: center;
-}
-
-.dropdown_box .dropdown_options select {
-  background: transparent;
-  line-height: 1;
-  border: 0;
-  padding: 0x;
-  border-radius: 10px;
-  width: 90%;
-  position: relative;
-  z-index: 10;
-  font-size: 1em;
-  font-family: "Fredoka";
-}
-
-/* Changes the font of the dropdown menu options to Outfit font */
-option {
-  font-family: "Fredoka";
-}
-
-/* Submit button */
-.submit {
-  font-family: "Fredoka";
-  width: 12%;
-  background-color:#6e3fcb;
-  color: rgb(252, 252, 252);
-  max-width: 10em;
-  border-radius:10px;
-  cursor: pointer;
-  padding: 18px 32px;
-  box-shadow: 0 6px 0 #4e00e9;
-  transition: .3s;
-  font-size: 16px;
-}
-
-.submit:active {
-  transform: translateY(5px);
-  box-shadow: 0 3px 0 #6738c3;
-}
-
-/* ===== Styles for results-page.html ===== */
-.results-text {
-  margin-top: 25px;
-}
-
-.food-results {
-  margin-left: 25%;
-  font-family: "Fredoka";
-}
-
-.search-again {
-  font-family: "Fredoka";
-  width: 12%;
-  background-color:#6e3fcb;
-  color: rgb(252, 252, 252);
-  max-width: 10em;
-  border-radius:10px;
-  cursor: pointer;
-  padding: 18px 32px;
-  box-shadow: 0 6px 0 #4e00e9;
-  transition: .3s;
-  font-size: 16px;
-}
-
-.search-again:active{
-  transform: translateY(5px);
-  box-shadow: 0 3px 0 #6738c3;
-}
-
-h1 {
-  font-family: "Fredoka";
-}
-
-h2 {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  font-family: "Fredoka";
-}
-
-h3 {
-  font-size: 24px;
-  margin-top: 30px;
-  font-family: "Fredoka";
-}
+  
+    border-top: 1px solid #6738c3;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    background-image: url(./stacked-peaks-haikei.svg);
+  }
+  
+  /* Credits, info, github link*/
+  .credits {
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+  }
+  
+  .github-icon {
+    display: inline-block;
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-top: 10px;
+  }
+  
+  /* ===== Styles for home-screen.html =====*/
+  .icon {
+    text-align: center;
+    color: black;
+    margin: 0 5px;
+  }
+  
+  .icon:hover {
+    color: white;
+  }
+  
+  .icon:active {
+    color: #e5cde9;
+  }
+  
+  h3 {
+    text-align: center;
+  }
+  
+  .dropdown_box {
+    width:140px;
+    height:40px;
+    border:0px;
+    outline:none;
+    max-width: 30em;
+    font-size: 13px;
+    padding: 10px 8px 10px 0px;
+    background: #fff;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .dropdown_box .dropdown_options {
+    width: 100%;
+    background: url("arrow.png") no-repeat;
+    background: 90% center;
+    text-align: center;
+  }
+  
+  .dropdown_box .dropdown_options select {
+    background: transparent;
+    line-height: 1;
+    border: 0;
+    padding: 0x;
+    border-radius: 10px;
+    width: 90%;
+    position: relative;
+    z-index: 10;
+    font-size: 1em;
+    font-family: "Fredoka";
+  }
+  
+  /* Changes the font of the dropdown menu options to Outfit font */
+  option {
+    font-family: "Fredoka";
+  }
+  
+  /* Submit button */
+  .submit {
+    font-family: "Fredoka";
+    width: 12%;
+    background-color:#6e3fcb;
+    color: rgb(252, 252, 252);
+    max-width: 10em;
+    border-radius:10px;
+    cursor: pointer;
+    padding: 18px 32px;
+    box-shadow: 0 6px 0 #4e00e9;
+    transition: .3s;
+    font-size: 16px;
+  }
+  
+  .submit:active {
+    transform: translateY(5px);
+    box-shadow: 0 3px 0 #6738c3;
+  }
+  
+  /* ===== Styles for results-page.html ===== */
+  .results-text {
+    margin-top: 25px;
+  }
+  
+  .food-results {
+    margin-left: 25%;
+    font-family: "Fredoka";
+  }
+  
+  .search-again {
+    font-family: "Fredoka";
+    width: 12%;
+    background-color:#6e3fcb;
+    color: rgb(252, 252, 252);
+    max-width: 10em;
+    border-radius:10px;
+    cursor: pointer;
+    padding: 18px 32px;
+    box-shadow: 0 6px 0 #4e00e9;
+    transition: .3s;
+    font-size: 16px;
+  }
+  
+  .search-again:active{
+    transform: translateY(5px);
+    box-shadow: 0 3px 0 #6738c3;
+  }
+  
+  h1 {
+    font-family: "Fredoka";
+  }
+  
+  h2 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-family: "Fredoka";
+  }
+  
+  h3 {
+    font-size: 24px;
+    margin-top: 30px;
+    font-family: "Fredoka";
+  }
